--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
 						<!---<div class="col-md-6 team-img-w3-agile">  
 						</div>-->
 						<div class="col-md-6 team-Info-agileits">
-							<h4>isabel njoroge G126/1299/2021</h4>
-							<span>Manager</span>
+							<h4>Issa</h4>
+							<span>Assistant Manager</span>
 							<p>Pain itself, because it is pain, sometimes produces a good .</p>
 						<div class="social-bnr-agileits footer-icons-agileinfo">
 							<ul class="social-icons3">
@@ -300,8 +300,8 @@
 					<div class="col-md-6 team-img-w3-agile">
 						</div>
 						<div class="col-md-6 team-Info-agileits">
-							<h4>hilda makena G126/1268/2021</h4>
-							<span>Receptionist</span>
+							<h4>hildah M</h4>
+							<span>Hostess</span>
 							<p>Pain itself, because it is pain, sometimes produces a good.</p>	
 						<div class="social-bnr-agileits footer-icons-agileinfo">
 							<ul class="social-icons3">
@@ -318,7 +318,7 @@
 						<div class="col-md-6 team-img-w3-agile">
 						</div>
 						<div class="col-md-6 team-Info-agileits">
-							<h4>Moses kamuti G126/2234/2020</h4>
+							<h4>John K</h4>
 							<span>Manager</span>
 							<p>Pain itself, because it is pain, sometimes produces a good.</p>
 						<div class="social-bnr-agileits footer-icons-agileinfo">
@@ -336,7 +336,7 @@
 					<!---<div class="col-md-6 team-img-w3-agile">
 						</div>-->
 						<div class="col-md-6 team-Info-agileits">
-							<h4>Edward sila G126/1297/2021</h4>
+							<h4>simon black</h4>
 							<span>Receptionist</span>
 							<p>Pain itself, because it is pain, sometimes produces a good.</p>
 						<div class="social-bnr-agileits footer-icons-agileinfo">
